add jdk17 startup doc of redis-proxy